--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -36,14 +36,32 @@
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- internal emulated storage -->
-    <storage android:mountPoint="/storage/emulated/legacy"
+    <storage android:mountPoint="/storage/sdcard0"
             android:storageDescription="@string/storage_internal"
             android:primary="true"
             android:emulated="true"
             android:mtpReserve="100" />
-    <!-- external micro sd card -->
+    <!-- Micro SD card -->
     <storage android:mountPoint="/storage/sdcard1"
             android:storageDescription="@string/storage_sd_card"
+            android:primary="false"
             android:removable="true"
-            android:maxFileSize="4096" />
+            android:allowMassStorage="true" />
+    <!-- Dock SD Card -->
+    <storage android:mountPoint="/storage/sdcard2"
+            android:storageDescription="@string/storage_sd_card"
+            android:primary="false"
+            android:removable="true"
+            android:allowMassStorage="true" />
+    <!-- external USB drive -->
+    <storage android:mountPoint="/storage/usbdisk0"
+            android:storageDescription="@string/storage_usb"
+            android:primary="false"
+            android:removable="true" />
+    <!-- external USB drive -->
+    <storage android:mountPoint="/storage/usbdisk1"
+            android:storageDescription="@string/storage_usb"
+            android:primary="false"
+            android:removable="true" />
 </StorageList>
+
